<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dealz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="attempts">attempts</string>
    <string name="Login">Login</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="CarDealz">CarDealz</string>
    <string name="Title">Title</string>
    <string name="Saving">difference</string>
    <string name="Age">Age</string>
    <string name="Mileage">Mileage</string>
    <string name="RegForDealz">REGISTER FOR CARDEALZ</string>
    <string name="NameReg">Full Name</string>
    <string name="EmailReg">Email</string>
    <string name="pswdReg">Password</string>
    <string name="buttonReg">Register</string>
    <string name="RegToLog">Already a member?</string>
    <string name="LogDealz">LOGIN TO CARDEALZ</string>
    <string name="emailLog">Email</string>
    <string name="pswdLog">Password</string>
    <string name="buttonLog">Login</string>
    <string name="LogToReg">I need to register!!</string>
    <string name="SingleLink">Link</string>
    <string name="SingleTitle">Title</string>
    <string name="SingleaSKING">askingprice</string>
    <string name="SinglePredicted">Predicted</string>
    <string name="SingleLocation">location</string>

</resources>
